# aave-swarm-v6.2-gcp

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-gke.yml
contracts/src/: AaveBotExecutor.sol  AaveBotFactory.sol
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: RiskSphere.tsx  TradeTimeline.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: CommandPallette.tsx  HolographicAgent.tsx  NeuralMap.tsx  RiskSphere.tsx  Swarm3D.tsx  SwarmNeuralNet.tsx
k8s/: configmap.yaml  hpa.yaml  service.yaml  swarm-deployment.yaml
src/: AaveBotExecutor.sol  agents.rs  main.rs  orchestrator.rs  ws.rs
src/agents/: bridge_optimizer.rs  evolution.rs  execution.rs  prediction.rs  risk.rs
workflows/: deploy-gke.yml
