[package]
name = "swarm-agents"
version = "6.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
alloy = { version = "0.3", features = ["full"] }
revm = { version = "19", features = ["std"] }
tch = { version = "0.15", default-features = false }
rayon = "1.10"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.26", features = ["tokio-comp"] }
log = "0.4"
env_logger = "0.11"
axum = { version = "0.7", features = ["ws"] }
serde_json = "1.0"

tokio-tungstenite = { version = "0.24", features = ["connect", "native-tls"], default-features = false }
